k8s/atlantis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
  namespace: default
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: atlantis-moraes-lat-ip
    networking.gke.io/managed-certificates: atlantis-cert
spec:
  ingressClassName: gce
  rules:
    - host: atlantis.moraes.lat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
